# fastapi-scalability

./: .gitignore  Makefile  main.py  pyproject.toml
load_test/: attack.sh  go.mod  go.sum  main.go  payload.json  plot.html  targets.list
