[tool.poetry]
name = "fastapi-scalability"
version = "0.1.0"
description = ""
authors = ["shayan.sadeghieh"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
